nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:117998157554:certificate/182d279c-669f-435a-9e6e-07ceee18a376
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
  labels:
    app: credit-contract-ui
  name: credit-contract-ui
  namespace: uiapps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: credit-contract-ui
  type: NodePort
