k8s-config.yaml
apiVersion: apps/v1    
kind: Deployment    
metadata:    
  name: credit-contract-ui
  namespace: uiapps
  labels:    
    app: credit-contract-ui  
spec:    
  replicas: 1    
  selector:    
    matchLabels:    
      app: credit-contract-ui 
  strategy:    
    rollingUpdate:    
      maxSurge: 25%    
      maxUnavailable: 25%    
    type: RollingUpdate    
  template:    
    metadata:    
      labels:    
        app: credit-contract-ui      
    spec:    
      containers:    
      - image: 183454673550.dkr.ecr.ap-south-1.amazonaws.com/credit-contract-ui:BUILDNUMBER    
        imagePullPolicy: Always    
        name: credit-contract-ui   
        ports:    
        - containerPort: 80    
          protocol: TCP    
      imagePullSecrets:    
      - name: aws-ecr  
     
---
apiVersion: networking.istio.io/v1alpha3   
kind: Gateway   
metadata:   
  name: credit-contract-ui 
spec:   
  selector:   
    istio: pvt-ingressgateway # use istio default controller   
  servers:   
  - port:   
      number: 80   
      name: http   
      protocol: HTTP   
    hosts:   
    - "*"   
     
---
apiVersion: networking.istio.io/v1alpha3   
kind: VirtualService   
metadata:   
  name: credit-contract-ui
spec:   
  hosts:   
  - "*"   
  gateways:   
  - credit-contract-ui   
  http:   
  - match:   
    route:   
    - destination:   
        host: credit-contract-ui  
        port:   
          number: 80
